# neura_task_ws

./: .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
src/neura_task/: CMakeLists.txt  package.xml
src/neura_task/include/neura_task/: conversions.hpp  joint_command_publisher.h  neura_task_node.hpp
src/neura_task/launch/: mobile_manipulator.launch.py  rox.launch.py  task1.launch.py  task2a.launch.py  task2a_with_base_move.launch.py  task2b.launch.py  task2b_circle.launch.py  task2b_line.launch.py
src/neura_task/rviz/: neura_task.rviz
src/neura_task/src/: joint_command_publisher.cpp  neura_task_main.cpp  neura_task_node.cpp
src/neura_task/urdf/: mobile_base.xacro  mobile_manipulator.urdf.xacro
